--- a/roles/Milestone-win-update/handlers/main.yml
+++ b/roles/Milestone-win-update/handlers/main.yml
@@ -9,7 +9,7 @@
         port: 2025
         subject: 
         body: "{{ lookup('template', 'templates/update-success.j2') }}"
-        from: mrockentine@vsecservices.com
+        from: 
         to:
         - "{{ hostvars[site-email-1]"
         - "{{ hostvars[site-email-2]"
